crates/rstest-bdd/tests/ui_macros/datatable_after_docstring.stderr
error: invalid step function signature: DataTable must be declared before DocString to match Gherkin ordering

         = help: Use `#[given] fn name(...args...)` with supported step arguments/fixtures (step attributes include `#[given]`, `#[when]`, and `#[then]`); remove `self` if present.

 --> tests/ui_macros/datatable_after_docstring.rs:6:41
  |
6 | fn step(docstring: String, #[datatable] table: Vec<Vec<String>>) {}
  |                                         ^^^^^
